# armadillo-webserver

./: .env  .gitignore  Cargo.toml  Dockerfile  Procfile  README  README.md  Rocket.toml  rustfmt.toml
armadillo-actix/: Cargo.toml
armadillo-actix/migrations/2020-07-26-152019_solar_microgrid/: down.sql
armadillo-actix/src/: data.rs
armadillo-actix/src/db/: bike.rs  bike_data.rs  data.rs  logs.rs  microgrid_data.rs  mod.rs  oven_data.rs  record.rs  trailer.rs  users.rs
armadillo-core/: Cargo.toml
armadillo-core/src/: data.rs  entity.rs  lib.rs  mod.rs  models.rs  query.rs  record.rs  structs.rs  test_query.rs
armadillo-database/: Cargo.toml
armadillo-database/migrations/2020-08-10-043646_remove-org/: down.sql  up.sql
armadillo-database/migrations/2020-08-15-093251_remove-id/: up.sql
armadillo-database/migrations/2020-08-15-100112_remove-unused-tables/: up.sql
armadillo-database/src/: db.rs  lib.rs  schema.rs
armadillo-server/: Cargo.toml
armadillo-server/migrations/2020-07-05-120227_create_basic_tables/: down.sql  up.sql
armadillo-server/migrations/2020-08-11-150438_change_timestamp_format/: down.sql  up.sql
armadillo-server/src/: data.rs  main.rs  org.rs  time.rs  trailer.rs
armadillo-server/src/db/: data.rs  db.rs  entity.rs  mod.rs  models.rs  orgs.rs  query.rs  record.rs  schema.rs  test_query.rs
db/: records.db
migrations/2020-07-05-120227_create_basic_tables/: down.sql  up.sql
migrations/2020-07-26-123153_solar_oven/: down.sql  up.sql
migrations/2020-07-26-152019_solar_microgrid/: up.sql
src/: data.rs  main.rs  models.rs  org.rs  ws.rs
src/api/: .mod.rs.swo  data.rs  logs.rs  mod.rs  models.rs  orgs.rs  schema.rs  trailers.rs  trailors.rs  users.rs
src/db/: data.rs  mod.rs  models.rs  orgs.rs  schema.rs
src/records/: mod.rs
static/app/: asset-manifest.json  index.html  precache-manifest.3cc6068251986d6463e69de9e4f103c4.js  service-worker.js
static/app/static/js/: 2.00433f65.chunk.js  2.00433f65.chunk.js.map  main.a4e7e4b9.chunk.js  main.a4e7e4b9.chunk.js.map  runtime-main.3fc39f2c.js  runtime-main.3fc39f2c.js.map
