[package]
name = "armadillo-webserver"
version = "0.1.0"
authors = ["Kai Dewey <deweykai5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
# serde = "1.0"
# serde_json = "1.0"
# serde_derive = "1.0"
# diesel = { version = "^1.4.5", features = ["postgres"] }
# diesel_migrations = "1.4.0"
# log = "0.4.8"