[package]
name = "armadillo-database"
version = "0.1.0"
authors = ["Mika Nikura <deweykai5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "^1.4.5", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"

armadillo-core = { path = "../armadillo-core" }
