[package]
name = "armadillo-server"
version = "0.1.0"
authors = ["Kai Dewey <deweykai5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0.56"
diesel = { version = "^1.4.5", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
env_logger = "0.7.1"
log = "0.4.11"
